<resources>
    <string name="app_name">Scafolgov</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_proyek">Proyek</string>
    <string name="title_notifications">Notifikasi</string>


    <string name="title_kegiatan">Kegiatan</string>
    <string name="title_paket">Paket</string>
    <string name="title_detail_paket">Detail</string>
    <string name="title_map_dash">Map Dashboard</string>

    <string name="tab_text_1">Info Umum</string>
    <string name="tab_text_2">Info Tagihan</string>

    <string name="tab_titleupdatedata">Update Data</string>
    .
    <string name="update_kurvas">Kurva S Rencana</string>
    <string name="update_editkontrak">Edit Kontrak</string>
    <string name="update_editlokasi">Edit Lokasi</string>
    <string name="update_progress">Progres Fisik</string>
    <string name="update_progress_keu">Progres Keuangan</string>
    <string name="update_progress_nonfisik">Progres Non-Fisik</string>
    <string name="catatan">Catatan</string>
    <string name="update_penyediajasa">Penyedia Jasa</string>
    <string name="update_upload">Upload Data</string>
    <string name="kurva_s">Kurva S Rencana</string>
    <string name="date">Tanggal</string>
    <string name="progress">Progres</string>
    <string name="date_range">Date Range</string>
    <string name="submit">Submit</string>
    <string name="aksi">Aksi</string>
    <string name="delete">Hapus</string>
    <!-- Change this to your app key -->
    <string name="app_key">e897yn721b9n6pl</string>
    <string name="title_activity_files">Files</string>
    <string name="title_activity_openwith">Open With</string>


</resources>
