<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_progress"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

        <Button
            android:id="@+id/btn_item_delete"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

    </LinearLayout>

</LinearLayout>