<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <androidx.cardview.widget.CardView
            android:id="@+id/card_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/kurva_s"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:layout_marginTop="8dp"
                            />

                        <EditText
                            android:id="@+id/tv_detail_date"
                            android:layout_marginTop="7dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextborder_generic"
                            android:text="@string/date"
                            android:padding="10dp"
                            android:layout_marginRight="5dp"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/btn_date"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/button_date_ripple"
                        android:tint="@color/colorwhite"
                        android:padding="10dp"
                        android:layout_gravity="bottom"
                        android:src="@drawable/baseline_date_range_black_24dp"
                        android:contentDescription="@string/date_range" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/tv_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"
                        />

                    <EditText
                        android:layout_marginTop="10dp"
                        android:id="@+id/edt_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:autofillHints="@string/progress"
                        android:padding="7dp"
                        android:background="@drawable/edittextborder_generic"
                        tools:targetApi="o"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/button_ripple"
                    android:text="@string/submit"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_add">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kurva_s"
                    android:textSize="16sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"
                        android:textSize="16sp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin" />

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="16sp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin" />

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/aksi"
                        android:textSize="16sp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_kurva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_kurva_s"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>